# FusionX-OS

./: CONTRIBUTING.md  README.md  ROADMAP.md
containers/: README.md
control-plane/: README.md
control-plane/config/: README.md
control-plane/deployments/: README.md
control-plane/pkg/schema/: README.md  capability.schema.json  environment.schema.json  health.schema.json
control-plane/services/api-gateway/: Cargo.toml  README.md  health.stub.json
control-plane/services/api-gateway/src/: main.rs
control-plane/services/capability-registry/: Cargo.toml  README.md  health.stub.json
control-plane/services/environment-manager/: Cargo.toml  README.md  health.stub.json
control-plane/services/environment-manager/src/: main.rs
control-plane/services/policy-adapter/: README.md  health.stub.json
control-plane/services/scheduler/: README.md  health.stub.json
desktop/: README.md
docs/: README.md  ownership.md
docs/architecture/: apple-silicon-boot.md  control-plane.md  filesystem-projection.md  hardware-abstraction.md  interfaces.md  kernel-patch-strategy.md  security-architecture.md  telemetry-observability.md
docs/control-plane/: api.md  capability-registry.md  mvp-scope.md  service-scaffolding.md
docs/development/: workflows.md
docs/virtualization/: orchestration.md
drivers/: README.md
filesystem/: README.md
hardware/: README.md
hardware/hal/: Cargo.toml  README.md
hardware/hal/src/: lib.rs  models.rs  (+2 more)
kernel/: README.md
scripts/: README.md
security/: README.md
tests/: README.md
tools/: README.md
virtualization/: README.md
(+3 files in other folders)
