[package]
name = "environment-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
